feat: add Exceptions